fixed css spacing

--- a/sass/components/_CardList.scss
+++ b/sass/components/_CardList.scss
@@ -1,3 +1,4 @@
 .card-list {
 	margin-top: 50px;
+	margin-bottom: 50px;
 }
