--- a/sass/components/_CardMobile.scss
+++ b/sass/components/_CardMobile.scss
@@ -1,5 +1,6 @@
 .card-mobile-container {
 	padding: 15px;
+	padding-bottom: 0px;
 	img {
 		height: auto;
 		width: 100%;
